# cpp-opengl-hello

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: main.cpp
